--- a/Views/Vehicle/Search.cshtml
+++ b/Views/Vehicle/Search.cshtml
@@ -9,7 +9,7 @@
     <div class="row">
         <div class="col-md-3">
             <select name="location" class="form-control">
-                <option value="">Địa điểm</option>
+                <option value="">Tất cả</option>
                 @foreach (var location in Model.Locations)
                 {
                     <option value="@location.Id">@location.Name</option>
