new db, test prj

--- a/Views/Account/Management_Post.cshtml
+++ b/Views/Account/Management_Post.cshtml
@@ -64,8 +64,8 @@
                                     alt="@bike.BikeName">
                             </td>
                             <td>@bike.BikeName</td>
-                            <td>$@bike.Price</td>
-                            <td>$@bike.PricePerHour</td>
+                            <td>@bike.Price đ</td>
+                            <td>@bike.PricePerHour đ</td>
                             <td>@bike.Location?.Name</td>
                             <td>@bike.Description</td>
                             <td class="action-icons">
