--- a/Views/Bikes/Create.cshtml
+++ b/Views/Bikes/Create.cshtml
@@ -19,9 +19,9 @@
             </div>
 
             <div class="col-md-6 mb-3">
-                <label asp-for="Price" class="form-label fw-bold">Giá bán</label>
+                <label asp-for="Price" class="form-label fw-bold">Giá thuê theo ngày</label>
                 <div class="input-group">
-                    <span class="input-group-text">$</span>
+                    <span class="input-group-text">₫</span>
                     <input asp-for="Price" class="form-control" type="number" step="0.01" placeholder="0.00" />
                 </div>
                 <span asp-validation-for="Price" class="text-danger"></span>
@@ -61,8 +61,8 @@
             <div class="col-md-6 mb-3">
                 <label asp-for="PricePerHour" class="form-label fw-bold">Giá thuê theo giờ</label>
                 <div class="input-group">
-                    <span class="input-group-text">$</span>
-                    <input asp-for="PricePerHour" class="form-control" type="number" step="0.01" placeholder="0.00" />
+                    <span class="input-group-text">₫</span>
+                    <input asp-for="PricePerHour" class="form-control" type="number" placeholder="0.00" />
                 </div>
                 <span asp-validation-for="PricePerHour" class="text-danger"></span>
             </div>
