--- a/Views/Bikes/ListBikes.cshtml
+++ b/Views/Bikes/ListBikes.cshtml
@@ -17,14 +17,16 @@
         {
             <div class="col-md-4 col-sm-12 mb-4">
                 <div class="card">
-                    <img src="@(!string.IsNullOrEmpty(bike.Img) ? bike.Img : defaultImage)" class="card-img-top" alt="@bike.BikeName">
+                    <img src="@(!string.IsNullOrEmpty(bike.Img) ? bike.Img : defaultImage)" class="card-img-top"
+                        alt="@bike.BikeName">
                     <div class="card-body">
                         <h5 class="card-title">@bike.BikeName</h5>
-                        <p class="card-text">Price: $@bike.Price</p>
-                        <p class="card-text">PricePerHour: $@bike.PricePerHour</p>
+                        <p class="card-text">Price: @bike.Price đ</p>
+                        <p class="card-text">PricePerHour: @bike.PricePerHour đ</p>
                         <p class="card-text">Location: @bike.Location?.Name</p>
                         <p class="card-text text-sm">Description: @bike.Description</p>
-                        <a class="btn btn-info" asp-controller="Bikes" asp-action="Details" asp-route-id="@bike.Id">View Details</a>
+                        <a class="btn btn-info" asp-controller="Bikes" asp-action="Details" asp-route-id="@bike.Id">View
+                            Details</a>
                     </div>
                 </div>
             </div>
